--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,112 @@
-aiohttp==3.6.2
+AaditsHangman==0.0.4
+aiohttp==3.8.3
+aiosignal==1.2.0
+altgraph==0.17
 amqp==5.0.1
 appdirs==1.4.4
-async-timeout==3.0.1
+APScheduler==3.6.3
+async-timeout==4.0.2
 attrs==20.1.0
 beautifulsoup4==4.9.3
 billiard==3.6.3.0
+bleach==3.2.1
 blinker==1.4
 bs4==0.0.1
+buttons==0.1.9
 cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
+charset-normalizer==2.1.1
 click==7.1.2
 click-didyoumean==0.0.3
 click-repl==0.1.6
+colorama==0.4.4
 dblpy==0.4.0
-discord.py==1.6.0
+discord==2.0.0
+discord-ext-menus @ git+https://github.com/Rapptz/discord-ext-menus@6f2b873bf0d28903eb752aa1166b3aac26dc9007
+discord-py-slash-command==1.0.8.5
+discord.py==2.0.1
 distlib==0.3.1
+docutils==0.16
 Faker==0.9.1
 filelock==3.0.12
 Flask==1.1.2
 Flask-Discord==0.1.63
+frozenlist==1.3.1
+future==0.18.2
 futures==3.1.1
+geopy==1.11.0
 gevent==20.6.2
 google-auth==1.21.0
 google-auth-oauthlib==0.4.1
 goslate==1.5.1
+gpsoauth==0.3.0
+gpxpy==1.1.1
 greenlet==0.4.16
 gspread==5.1.1
 gunicorn==20.0.4
+httmock==1.2.5
 httplib2==0.18.1
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
+keyring==21.8.0
 kombu==5.0.2
+macholib==1.14
 MarkupSafe==1.1.1
 multidict==4.7.6
+mysql-connector-python==8.0.22
 nose==1.3.7
 oauth2client==4.1.3
 oauthlib==3.1.0
+packaging==20.8
+patreon==0.5.1
+Pillow==8.1.0
 pipenv==2020.6.2
+pkginfo==1.6.1
 prompt-toolkit==3.0.8
+protobuf==3.0.0b3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycryptodomex==3.4.2
 PyDictionary==2.0.1
+pygame==2.0.0
+Pygments==2.7.4
+pyinstaller-hooks-contrib==2020.11
 PyJWT==1.7.1
+pymongo==3.11.2
+PyMySQL==1.0.2
+pynput==1.7.2
+pyobjc-core==7.1
+pyobjc-framework-Cocoa==7.1
+pyobjc-framework-Quartz==7.1
+pyparsing==2.4.7
+pypresence==4.0.0
 python-dateutil==2.8.1
 pytz==2020.1
 RandomWords==0.3.0
 ratelimiter==1.2.0.post0
-requests==2.24.0
+readme-renderer==28.0
+requests==2.25.1
 requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
+rfc3986==1.4.0
 rsa==4.6
+s2sphere==0.2.4
 six==1.15.0
 soupsieve==2.0.1
 text-unidecode==1.2
+tqdm==4.56.0
+twine==3.3.0
+tzlocal==2.1
 urllib3==1.25.10
 vine==5.0.0
 virtualenv==20.0.30
 virtualenv-clone==0.5.4
 wcwidth==0.2.5
+webencodings==0.5.1
 Werkzeug==1.0.1
+xxhash==0.6.1
 yarl==1.5.1
 zope.event==4.4
 zope.interface==5.1.0
