--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 discord.py==2.0.1
-gspread==5.1.1
+gspread==5.6.2
 oauth2client==4.1.3
 PyDictionary==2.0.1
-pypresence==4.0.0
+pymongo==3.11.2
 RandomWords==0.3.0
-Requests==2.27.1
+Requests==2.28.1
